// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emotion primitives primitive should work with \`withComponent\` 1`] = `
<Text
  style={
    Object {
      "color": "hotpink",
    }
  }
>
  Mike
</Text>
`;

exports[`Emotion primitives should pass props in withComponent 1`] = `
<View
  color="green"
  style={
    Object {
      "backgroundColor": "green",
    }
  }
/>
`;

exports[`Emotion primitives should pass props in withComponent 2`] = `
<Text
  color="hotpink"
  style={
    Object {
      "backgroundColor": "hotpink",
    }
  }
/>
`;

exports[`Emotion primitives should render <Image /> 1`] = `
<Image
  source={
    Object {
      "height": 150,
      "uri": "https://camo.githubusercontent.com/209bdea972b9b6ef90220c59ecbe66d35ffefa8a/68747470733a2f2f63646e2e7261776769742e636f6d2f746b6834342f656d6f74696f6e2f6d61737465722f656d6f74696f6e2e706e67",
      "width": 150,
    }
  }
  style={
    Object {
      "borderColor": "hotpink",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
/>
`;

exports[`Emotion primitives should render primitive with style prop 1`] = `
<Text
  style={
    Object {
      "color": "hotpink",
      "padding": 10,
    }
  }
>
  Emotion primitives
</Text>
`;

exports[`Emotion primitives should render the primitive on changing the props 1`] = `
<Text
  style={
    Object {
      "color": "hotpink",
      "paddingBottom": 20,
      "paddingLeft": 20,
      "paddingRight": 20,
      "paddingTop": 20,
    }
  }
>
  Emotion Primitives
</Text>
`;

exports[`Emotion primitives should render the primitive when styles applied using object style notation 1`] = `
<Text
  style={
    Object {
      "backgroundColor": "red",
      "color": "red",
      "fontSize": 40,
    }
  }
>
  Emotion Primitives
</Text>
`;

exports[`Emotion primitives should style any other component 1`] = `
<Text
  style={
    Object {
      "color": "hotpink",
    }
  }
>
  Hello World
</Text>
`;

exports[`Emotion primitives should unmount with emotion-theming 1`] = `
<div>
  <p
    id="something"
    style="display: flex; background-color: yellow;"
  >
    Hello World
  </p>
</div>
`;

exports[`Emotion primitives should work with StyleSheet.create API 1`] = `
<Text
  style={
    Object {
      "color": "red",
      "fontSize": 10,
    }
  }
>
  Emotion Primitives
</Text>
`;

exports[`Emotion primitives should work with emotion-theming 1`] = `
<Text
  style={
    Object {
      "color": "magenta",
    }
  }
>
  Hello World
</Text>
`;
